# VocabSynth

./: .gitignore  CLAUDE.md  LICENSE  README.md  concept.md  pyproject.toml
docs/: api.rst  conf.py  index.rst
scripts/: eval_component_logit.py  eval_contextual_head.py  eval_contrastive_cwe.py  eval_cwe_improvements.py  eval_diverse_vocab.py  eval_generation.py  eval_gw_output.py  eval_input_equiv.py  eval_layerwise.py  eval_mean_center_scale.py  eval_multiword_affix.py  eval_omp.py  eval_ot_output.py  eval_output_candidate.py  eval_relation_correction.py  eval_scale.py  eval_semantic_inference.py  eval_template_isolation.py  eval_z_normalized.py
src/vocabsynth/: __init__.py  analyzer.py  composer.py  contextual_head.py  corrector.py  injector.py  logit_head.py  omp_composer.py  ot_composer.py  registry.py
